force-app/main/default/objects/animalos__Status_Tracking__c/animalos__Status_Tracking__c.object-meta.xml
<CustomObject>
    <label>Status Tracking</label>
    <nameField>
        <displayFormat>ST{00000}</displayFormat>
        <label>Status Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>