force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Animal_Referral__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Referral</label>
    <referenceTo>animalos__Animal_Referral__c</referenceTo>
    <relationshipLabel>Status Tracking</relationshipLabel>
    <relationshipName>Status_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>