force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Status__c</fullName>
    <label>Animal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Animal_Status</valueSetName>
    </valueSet>
</CustomField>