force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Type__c</fullName>
    <label>Animal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>