force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Current_Site__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Site</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipName>Current_Site_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>