force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Days_in_Month__c.field-meta.xml
<CustomField>
    <fullName>animalos__Days_in_Month__c</fullName>
    <label>Days in Month</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>