force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Days_in_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Days_in_Status__c</fullName>
    <formula>IF( ISBLANK( animalos__End_Date_Time__c ), NOW() - animalos__Start_Date_Time__c, animalos__End_Date_Time__c - animalos__Start_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>