force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Generic_Status_Tracking__c.field-meta.xml
<CustomField>
    <fullName>animalos__Generic_Status_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Generic Status Tracking</label>
    <referenceTo>animalos__Status_Tracking__c</referenceTo>
    <relationshipLabel>Monthly Status Tracking Records</relationshipLabel>
    <relationshipName>Monthly_Status_Tracking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>