force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Last_Calculation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Last_Calculation_Date_Time__c</fullName>
    <label>Last Calculation Date/Time</label>
    <type>DateTime</type>
</CustomField>