force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Month__c.field-meta.xml
<CustomField>
    <fullName>animalos__Month__c</fullName>
    <label>Month</label>
    <length>4</length>
    <type>Text</type>
</CustomField>