force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Month_Number__c.field-meta.xml
<CustomField>
    <fullName>animalos__Month_Number__c</fullName>
    <formula>VALUE(animalos__Month__c)</formula>
    <label>Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>