force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Previous_Record__c.field-meta.xml
<CustomField>
    <fullName>animalos__Previous_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Record</label>
    <referenceTo>animalos__Status_Tracking__c</referenceTo>
    <relationshipName>Previous_Record</relationshipName>
    <type>Lookup</type>
</CustomField>