force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>animalos__Referral_Source__c</fullName>
    <formula>IF(
        NOT(ISBLANK(TEXT(animalos__Referral__r.animalos__Animal_Source__c))),
        animalos__Referral_Source_Text__c,
        IF(
        OR(animalos__Referral__r.RecordType.DeveloperName == &apos;Outbound_Animal&apos;, animalos__Referral__r.RecordType.DeveloperName == &apos;Adoption&apos;),
        animalos__Referral_Source_Text__c,
        &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Source</label>
    <type>Text</type>
</CustomField>