force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Referral_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>animalos__Referral_Source_Text__c</fullName>
    <label>Referral Source Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>