force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>animalos__Return_Reason__c</fullName>
    <formula>TEXT(animalos__Referral__r.animalos__Return_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Reason</label>
    <type>Text</type>
</CustomField>