force-app/main/default/objects/animalos__Status_Tracking__c/fields/animalos__Year__c.field-meta.xml
<CustomField>
    <fullName>animalos__Year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>