force-app/main/default/objects/animalos__Status_Tracking__c/fields/aos_External_Id__c.field-meta.xml
<CustomField>
    <fullName>aos_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>