force-app/main/default/objects/animalos__Status_Tracking__c/recordTypes/animalos__Generic.recordType-meta.xml
<RecordType>
    <fullName>animalos__Generic</fullName>
    <active>true</active>
    <description>Created automatically each time the Animal Status on an Animal record changes.</description>
    <label>Generic</label>
</RecordType>