force-app/main/default/objects/animalos__Status_Tracking__c/recordTypes/animalos__Monthly.recordType-meta.xml
<RecordType>
    <fullName>animalos__Monthly</fullName>
    <active>true</active>
    <description>Created automatically via a scheduled process which runs each night and calculates Animal Status days within specific months.</description>
    <label>Monthly</label>
</RecordType>