force-app/main/default/objects/animalos__Status_Tracking__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Animal_Status__c</columns>
    <columns>animalos__Animal__c</columns>
    <columns>animalos__Start_Date_Time__c</columns>
    <columns>animalos__End_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>